@@ -26,7 +26,7 @@ import java.util.AbstractMap.SimpleEntry;
 import java.util.ArrayList;
 import java.util.List;
 import java.util.Map;
-import java.util.Map.Entry;
+import java.util.stream.Collectors;
 
 import org.apache.openmeetings.db.dao.server.OAuth2Dao;
 import org.apache.openmeetings.db.entity.server.OAuthServer;
@@ -137,8 +137,7 @@ public class OAuthForm extends AdminBaseForm<OAuthServer> {
 		mappingView.setModelObject(getModelObject().getMapping().entrySet()
 				.stream()
 				.map(SimpleEntry::new)
-				.map(e -> (Entry<String, String>)e)
-				.toList());
+				.collect(Collectors.toList()));
 		return mappingView;
 	}
 
