@@ -32,6 +32,7 @@ import java.util.ArrayList;
 import java.util.Collection;
 import java.util.Iterator;
 import java.util.List;
+import java.util.stream.Collectors;
 
 import org.apache.openmeetings.db.dao.file.FileItemDao;
 import org.apache.openmeetings.db.dao.room.RoomDao;
@@ -198,7 +199,7 @@ public class RoomForm extends AdminBaseForm<Room> {
 			public void query(String term, int page, Response<RoomGroup> response) {
 				response.addAll(orgRooms.stream()
 						.filter(rg -> Strings.isEmpty(term) || rg.getGroup().getName().contains(term))
-						.toList()
+						.collect(Collectors.toList())
 						);
 			}
 
@@ -430,7 +431,7 @@ public class RoomForm extends AdminBaseForm<Room> {
 
 	void updateClients(AjaxRequestTarget target) {
 		long roomId = getModelObject().getId() != null ? getModelObject().getId() : 0;
-		clients.setDefaultModelObject(cm.streamByRoom(roomId).toList());
+		clients.setDefaultModelObject(cm.streamByRoom(roomId).collect(Collectors.toList()));
 		target.add(clientsContainer);
 	}
 
